--- a/source/_posts/2015这一年.md
+++ b/source/_posts/2015这一年.md
@@ -20,6 +20,8 @@ tags: 随笔
 回到我在成都上班时租的那个小屋子里，然后和Y约好了准备一起去她的学校游玩。她上学的地方在南充，已经帮我买好了动车票。突然电话铃响了，是我一老乡T打来的，他说他的爸爸离世了，让我下午去接他然后晚上陪他一起回老家，我答应了。T买了下午2点从青岛到成都的机票回来，晚上我和另一个哥们儿L租了个车把T送回老家，一路奔波，当天晚上我和L又返回到成都，再次抵达成都的时候，已经是早上8点多了。和L匆匆道别，然后买了张去南充的动车票当天就去了Y的学校。Y在车站来接的我，去吃了美味的大虾，虽然好累，但是和Y在一起很开心。后来我们一起玩了很多天，直到Y到机场送我去北京，又是离别，我真的好不舍，"说再见，何时才能再见，当我拉下窗帘，你出现在我的美梦里面"。后来Y也漂洋过海，远去他乡，独自一人在外工作。和Y在一起的那些日子，大概是我今年最开心的一段时光了吧。有一首歌是我此刻对Y的心情
 <audio style="width:100%" controls="controls" src="http://sc1.111ttt.com:8282/2015/5/12m/05/105051259240.m4a"></audio>
 
-来到北京，每天都是工作，吃饭，睡觉，平淡无奇，但每天最期待的，就是下班过后能与Y打一通电话，因为国际长途很贵，所以我们一直使用QQ的通话功能，偶尔也开一下视频。
+来到北京，搬进自己和同事合租的出租房里，屋子不怎么样，租金倒是挺高的，突然发现北京的消费水平还真是高。第二天和同事一起去宜家买了一些厨卫家具等用品，郁闷的是那天在宜家把雨伞搞丢了，虽然那个雨伞不怎么值钱，可是它却陪伴了我好几年了，后来我又回去找了一遍还是没有找到。似乎一切都安顿好了，就等着入职了，7月2号如期而至，我一个人早早的去了入职的地方----西海国际，没有认识的人，一切都是好陌生，不过后来遇到了一个四川老乡，心情也是很好的。我们新人入职过后紧接着就是培训，那么多名校毕业的同事，自己感觉压力还是好大呢，我们培训的地方在五道口清华同方大厦，那边的区位非常好，但似乎就是上下班高分期车流非常拥堵，不过我到是没有感受过，我每天乘地铁上下班，从八号线转到15号线，因为每天下班都比较晚，所以人都不是很多，好多时候都还有座位可以座。五道口那边的商业比较繁华，闲下来的时候约三五同事一起去U-CENTER吃一顿烤鱼也是极好的。培训期间我们换过好几名老师，都是教授我们不同知识的人，从环境搭建到业务流程，每一个老师都讲得很好很用心。特别是培训CSS的课程的时候，遇到了业界比较出名的css大牛瑶姐，瑶姐讲课讲得很好，我每次都很认真的听课，回答问题，完成学习任务。当时我们吃中午饭去的最多的地方就是清华同方的那个“天坑”下面，我很喜欢吃里面的有一家江西瓦罐汤，每次还要加上一个烤鸡腿，然后把汤都喝完才收场。 其次就是去那个沙县小吃了，想吐槽的是那一家沙县小吃的分量真的好少，点一个xx饭，饭倒是挺多的，但是那个菜就只有一丁点!,根本不够下翻好伐!. 我好多时候都是点那个乌鸡汤饭，虽然量少，但味道还是比较好的。
+
+在五道口待了近2个月，终于到了开始做结业项目的时候了。我和另外几个后端的同学被分到一个CRM的项目，需要去东升科技园常驻，我们就直接去东升了。几位小伙伴都很给力，大家积极的分析需求，与PM 沟通，努力解决技术问题。东升的环境非常好，有健身房、乒乓球台，浴室等设施，好喜欢去健身房的按摩椅上面按摩。刚去东升的时候都没有工位了，我们团队5个人挤在3张桌子拼起来的桌子上办公，地上布满了各种线路，不过还好，至少没有影响到正常干活儿。项目大概做了两周就到结业答辩了， 我的答辩老师是机票事业部一个很牛的前端，问了我一些比较基础的问题，我回答的还算一般吧，只是他说深度不够，还给我讲解了实际项目开发中应该注意的一些问题，感谢那位老师给了我非常好的建议。结业项目完成过后就把我们分到业务线去了，不过那个时候还没有正式去业务线，我们等到国庆节过后才到业务线的。一到业务线，又是一套新的环境，新的同事，要适应的东西挺多的。现在每天都是工作，吃饭，睡觉，平淡无奇，但每天最期待的，就是下班过后能与Y打一通电话，因为国际长途很贵，所以我们一直使用QQ的通话功能，偶尔也开一下视频。 
 
 回忆太多，很容易伤感。还有好多没写，不结尾，元旦快乐！
