--- a/source/_posts/2015这一年.md
+++ b/source/_posts/2015这一年.md
@@ -7,6 +7,8 @@ tags: 随笔
 
 我都不知道该如何回忆这一年，发生了很多事情，大学毕业、第一份工作、女朋友、北漂……。还记得2015年的元旦，那个时候正在成都的一家创业公司上班，公司就只有8个人，还包括两个老板。即使这样，但工作氛围倒也比较可以的，老板对我们员工都还好，平时下班/休息的时候我们还一起打桌上足球很是欢乐。但是越到后来我越是觉得待不下去，那个时候还没毕业，总觉得自己还能找一份更好的工作。临近毕业了，这种想法更是强烈。有一次在某技术群里面聊天，偶然看到司徒正美发的一个关于Qunar网校园招聘的信息，于是就去试着投了简历。后来出乎意料的收到了笔试通知。再后来也就就接到面试邀请了，本来也没抱多大希望的，面试那天表现也不是很好，晚上回学校的时候天上下着雨，也是急匆匆的往回赶，然后，手机丢了……（这样写起来似乎还有因果关系呢），后来我从那个创业公司辞职了，有一种解脱的感觉。
 
+<!-- more -->
+
 大约过了一个月过后，我收到了Qunar网的offer，当时心情还是挺激动的，终于有了一份正式的工作，就等着毕业过后去公司报到。
 
 接下来就是全力准备毕业论文答辩了，写论文这个过程很痛苦，大概改了11个版本吧，现在看到这些草稿便不由的发笑。临近答辩，心里还是挺忐忑的，毕竟上台面对那么多人并不是我的强项。可是有什么办法呢，为了顺利拿到毕业证，自己必须勇敢一点。
